--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ header{
     background-color: darkred;
 }
 .slider{
+    /*width: 500px;
+    height: 300px;
+    Remover comentário para usar Slide com tamanho fixo e ajustar o tamanho do slide*/
     flex: 1;
     overflow: hidden;
 }
@@ -31,6 +34,14 @@ header{
     height: inherit;
     background-position: center;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 0px 1px 1px #333;
+    color: white;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 .slider--controls{
     position: absolute;
